@@ -1,6 +1,6 @@
 {
 	"name": "GUI_Unifyer",
-	"version": "1.11.5",
+	"version": "1.11.6",
 	"title": "GUI Unifyer",
 	"description": "Forces mod buttons to look uniform and aligned, harminizes icons, and adds visual options for buttons.\n\nSupports more than 100 mods: Factory Planner, Helmod, Module Inserter, Placeables, Bob's mods, Pyanodon, Schall's mods, Todo List, Creative Mod, BeastFinder, Bob's mods, Blueprint-request, CleanMap, Death Counter, FJEI, 248k, Hive Mind, Outpost Planner, Silo Stats, Attila Zoom, Zoom, Auto Trash, Homeworld, Teleportation, RPG, Trashcan, Kuxynator's mods, Factorissimo2...",
 	"author": "snouz",
@@ -11,8 +11,8 @@
 		"?248k",
 		"?actual-craft-times-remade",
 		"?advanced-logistics-system-fork",
-		"?Asteroid_Mining",
 		"?AttilaZoomMod",
+		"?automatic-belt-direction",
 		"?AutoTrash",
 		"?BeastFinder",
 		"?BetterBotsFixed",
@@ -27,6 +27,7 @@
 		"?boblogistics",
 		"?CargoTrainManager",
 		"?ChangeMapSettings",
+		"?CitiesOfEarth",
 		"?CleanMap",
 		"?clusterio",
 		"?CommuGuideMod",
@@ -34,11 +35,13 @@
 		"?CredoTimeLapseModByGalapagon",
 		"?Cursed-Exp",
 		"?Death_Counter",
+		"?Decu",
 		"?default-wait-conditions",
 		"?DeleteEmptyChunks",
 		"?diplomacy",
 		"?DoingThingsByHand",
 		"?Electronic_Locomotives",
+		"?enemyracemanager"
 		"?FacAutoScreenshot",
 		"?Factorissimo2",
 		"?factoryplanner",
@@ -71,6 +74,7 @@
 		"?NonWaveDefense2",
 		"?Not_Enough_Todo",
 		"?Nullius",
+		"?oarc-mod",
 		"?osha_hot_swap",
 		"?OutpostPlanner",
 		"?PersonalTeleporter",
@@ -81,6 +85,7 @@
 		"?production-monitor",
 		"?pycoalprocessing",
 		"?quickbarimportexport",
+		"?rd-se-multiplayer-compat",
 		"?RecExplo",
 		"?region-cloner",
 		"?remote-switch",
@@ -105,6 +110,7 @@
 		"?space-factorissimo-updated",
 		"?SpaceMod",
 		"?SpawnControl",
+		"?Spiderissmo",
 		"?spidersentinel",
 		"?TeamCoop",
 		"?Teleportation_Redux",
