@@ -81,6 +81,8 @@ base_pvp_space_race_button=Space Race Menu
 base_pvp_admin_button=Admin menu
 Spiderissmo_spider_button=Spiderissmo Vehicle Management
 Spiderissmo_minimap_button=Spiderissmo Camera
+abd_on_button=Automatic Belt Direction\nCurrently: [font=default-semibold][color=128, 206, 240]ON[/color][/font]
+abd_off_button=Automatic Belt Direction\nCurrently: [font=default-semibold][color=128, 206, 240]OFF[/color][/font]
 
 [mod-setting-name]
 gu_frame_style_setting=Top frame style
