@@ -81,6 +81,8 @@ base_pvp_space_race_button=Course à l'espace
 base_pvp_admin_button=Menu Admin
 Spiderissmo_spider_button=Spiderissmo - gestion de Véhicule
 Spiderissmo_minimap_button=Spiderissmo - Caméra
+abd_on_button=Direction Automatique des Tapis\nActuellement: [font=default-semibold][color=128, 206, 240]ON[/color][/font]
+abd_off_button=Direction Automatique des Tapis\nActuellement: [font=default-semibold][color=128, 206, 240]OFF[/color][/font]
 
 [mod-setting-name]
 gu_frame_style_setting=Style de la fenêtre de boutons (haut-gauche)
